// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form /> should check Form functionality 1`] = `
<div>
  <form
    class="makeStyles-form-1"
    novalidate=""
  >
    <p
      class="makeStyles-title-4"
      data-title="1"
    >
      Signup
    </p>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="MuiLinearProgress-root MuiLinearProgress-colorPrimary makeStyles-stepper-3 MuiLinearProgress-determinate"
      role="progressbar"
    >
      <div
        class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
        style="transform: translateX(-66.66666666666666%);"
      />
    </div>
    <div
      class="makeStyles-overflow-5"
    >
      <div
        class="makeStyles-container-6"
        data-test-wrap="1"
        style="transform: translateX(0);"
      >
        <div
          class="MuiFormGroup-root makeStyles-group-2 makeStyles-showGroup-13"
        />
        <div
          class="MuiFormGroup-root makeStyles-group-2 makeStyles-hideGroup-12"
        >
          <label
            class="MuiFormLabel-root makeStyles-text-8"
          >
            date of birth
          </label>
          <div
            class="makeStyles-date-7"
          />
          <label
            class="MuiFormLabel-root makeStyles-text-8"
          >
            gender
          </label>
          <label
            class="MuiFormLabel-root makeStyles-text-8"
          >
            where did you hear about is?
          </label>
        </div>
        <div
          class="MuiFormGroup-root makeStyles-group-2 makeStyles-hideGroup-12"
          style="justify-content: center; align-items: center;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            style="color: rgb(187, 233, 140); font-size: 230px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.29 16.29L5.7 12.7a.9959.9959 0 010-1.41c.39-.39 1.02-.39 1.41 0L10 14.17l6.88-6.88c.39-.39 1.02-.39 1.41 0 .39.39.39 1.02 0 1.41l-7.59 7.59c-.38.39-1.02.39-1.41 0z"
            />
          </svg>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            role="dashboard-btn"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Go to Dashboard
              <span
                class="MuiButton-endIcon MuiButton-iconSizeMedium"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-buttons-9"
      style="opacity: 1; pointer-events: initial;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text"
        role="back-btn"
        style="visibility: hidden;"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
          </span>
          Back
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
        role="submit"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Next
          <span
            class="MuiButton-endIcon MuiButton-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`<Form /> should check Form functionality 2`] = `
<div>
  <form
    class="makeStyles-form-1"
    novalidate=""
  >
    <p
      class="makeStyles-title-4"
      data-title="1"
    >
      Signup
    </p>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="67"
      class="MuiLinearProgress-root MuiLinearProgress-colorPrimary makeStyles-stepper-3 MuiLinearProgress-determinate"
      role="progressbar"
    >
      <div
        class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
        style="transform: translateX(-33.33333333333333%);"
      />
    </div>
    <div
      class="makeStyles-overflow-5"
    >
      <div
        class="makeStyles-container-6"
        data-test-wrap="1"
        style="transform: translateX(-100%);"
      >
        <div
          class="MuiFormGroup-root makeStyles-group-2 makeStyles-hideGroup-12"
        />
        <div
          class="MuiFormGroup-root makeStyles-group-2 makeStyles-showGroup-13"
        >
          <label
            class="MuiFormLabel-root makeStyles-text-8"
          >
            date of birth
          </label>
          <div
            class="makeStyles-date-7"
          />
          <label
            class="MuiFormLabel-root makeStyles-text-8"
          >
            gender
          </label>
          <label
            class="MuiFormLabel-root makeStyles-text-8"
          >
            where did you hear about is?
          </label>
        </div>
        <div
          class="MuiFormGroup-root makeStyles-group-2 makeStyles-hideGroup-12"
          style="justify-content: center; align-items: center;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            style="color: rgb(187, 233, 140); font-size: 230px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.29 16.29L5.7 12.7a.9959.9959 0 010-1.41c.39-.39 1.02-.39 1.41 0L10 14.17l6.88-6.88c.39-.39 1.02-.39 1.41 0 .39.39.39 1.02 0 1.41l-7.59 7.59c-.38.39-1.02.39-1.41 0z"
            />
          </svg>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            role="dashboard-btn"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Go to Dashboard
              <span
                class="MuiButton-endIcon MuiButton-iconSizeMedium"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-buttons-9"
      style="opacity: 1; pointer-events: initial;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text"
        role="back-btn"
        style="visibility: visible;"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
          </span>
          Back
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
        role="submit"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Next
          <span
            class="MuiButton-endIcon MuiButton-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`<Form /> should check Form functionality 3`] = `
<div>
  <form
    class="makeStyles-form-1"
    novalidate=""
  >
    <p
      class="makeStyles-title-4"
      data-title="1"
    >
      Thank you!
    </p>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="MuiLinearProgress-root MuiLinearProgress-colorPrimary makeStyles-stepper-3 MuiLinearProgress-determinate"
      role="progressbar"
    >
      <div
        class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
        style="transform: translateX(0%);"
      />
    </div>
    <div
      class="makeStyles-overflow-5"
    >
      <div
        class="makeStyles-container-6"
        data-test-wrap="1"
        style="transform: translateX(-200%);"
      >
        <div
          class="MuiFormGroup-root makeStyles-group-2 makeStyles-hideGroup-12"
        />
        <div
          class="MuiFormGroup-root makeStyles-group-2 makeStyles-hideGroup-12"
        >
          <label
            class="MuiFormLabel-root makeStyles-text-8"
          >
            date of birth
          </label>
          <div
            class="makeStyles-date-7"
          />
          <label
            class="MuiFormLabel-root makeStyles-text-8"
          >
            gender
          </label>
          <label
            class="MuiFormLabel-root makeStyles-text-8"
          >
            where did you hear about is?
          </label>
        </div>
        <div
          class="MuiFormGroup-root makeStyles-group-2 makeStyles-showGroup-13"
          style="justify-content: center; align-items: center;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            style="color: rgb(187, 233, 140); font-size: 230px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.29 16.29L5.7 12.7a.9959.9959 0 010-1.41c.39-.39 1.02-.39 1.41 0L10 14.17l6.88-6.88c.39-.39 1.02-.39 1.41 0 .39.39.39 1.02 0 1.41l-7.59 7.59c-.38.39-1.02.39-1.41 0z"
            />
          </svg>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            role="dashboard-btn"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Go to Dashboard
              <span
                class="MuiButton-endIcon MuiButton-iconSizeMedium"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-buttons-9"
      style="opacity: 0; pointer-events: none;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text"
        role="back-btn"
        style="visibility: visible;"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
          </span>
          Back
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
        role="submit"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Next
          <span
            class="MuiButton-endIcon MuiButton-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`<Form /> should check Form functionality 4`] = `
<div
  aria-hidden="true"
>
  <form
    class="makeStyles-form-1"
    novalidate=""
  >
    <p
      class="makeStyles-title-4"
      data-title="1"
    >
      Thank you!
    </p>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="MuiLinearProgress-root MuiLinearProgress-colorPrimary makeStyles-stepper-3 MuiLinearProgress-determinate"
      role="progressbar"
    >
      <div
        class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
        style="transform: translateX(0%);"
      />
    </div>
    <div
      class="makeStyles-overflow-5"
    >
      <div
        class="makeStyles-container-6"
        data-test-wrap="1"
        style="transform: translateX(-200%);"
      >
        <div
          class="MuiFormGroup-root makeStyles-group-2 makeStyles-hideGroup-12"
        />
        <div
          class="MuiFormGroup-root makeStyles-group-2 makeStyles-hideGroup-12"
        >
          <label
            class="MuiFormLabel-root makeStyles-text-8"
          >
            date of birth
          </label>
          <div
            class="makeStyles-date-7"
          />
          <label
            class="MuiFormLabel-root makeStyles-text-8"
          >
            gender
          </label>
          <label
            class="MuiFormLabel-root makeStyles-text-8"
          >
            where did you hear about is?
          </label>
        </div>
        <div
          class="MuiFormGroup-root makeStyles-group-2 makeStyles-showGroup-13"
          style="justify-content: center; align-items: center;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            style="color: rgb(187, 233, 140); font-size: 230px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.29 16.29L5.7 12.7a.9959.9959 0 010-1.41c.39-.39 1.02-.39 1.41 0L10 14.17l6.88-6.88c.39-.39 1.02-.39 1.41 0 .39.39.39 1.02 0 1.41l-7.59 7.59c-.38.39-1.02.39-1.41 0z"
            />
          </svg>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            role="dashboard-btn"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Go to Dashboard
              <span
                class="MuiButton-endIcon MuiButton-iconSizeMedium"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-buttons-9"
      style="opacity: 0; pointer-events: none;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text"
        role="back-btn"
        style="visibility: visible;"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
          </span>
          Back
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
        role="submit"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Next
          <span
            class="MuiButton-endIcon MuiButton-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`<Form /> should check Form functionality 5`] = `
<div>
  <form
    class="makeStyles-form-1"
    novalidate=""
  >
    <p
      class="makeStyles-title-4"
      data-title="1"
    >
      Thank you!
    </p>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="MuiLinearProgress-root MuiLinearProgress-colorPrimary makeStyles-stepper-3 MuiLinearProgress-determinate"
      role="progressbar"
    >
      <div
        class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
        style="transform: translateX(0%);"
      />
    </div>
    <div
      class="makeStyles-overflow-5"
    >
      <div
        class="makeStyles-container-6"
        data-test-wrap="1"
        style="transform: translateX(-200%);"
      >
        <div
          class="MuiFormGroup-root makeStyles-group-2 makeStyles-hideGroup-12"
        >
          <label
            class="MuiFormControlLabel-root makeStyles-control-15"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-input-14 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                data-shrink="true"
                for="email"
                id="email-label"
              >
                EMAIL
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiInput-input"
                  id="email"
                  name="email"
                  type="email"
                  value="test@mail.ru"
                />
              </div>
            </div>
            <span
              class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
            />
          </label>
          <label
            class="MuiFormControlLabel-root makeStyles-control-15"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-input-14 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                data-shrink="true"
                for="password"
                id="password-label"
              >
                PASSWORD
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiInput-input"
                  id="password"
                  name="password"
                  type="password"
                  value="123123"
                />
              </div>
            </div>
            <span
              class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
            />
          </label>
          <label
            class="MuiFormControlLabel-root makeStyles-control-15"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-input-14 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                data-shrink="true"
                for="confirm_password"
                id="confirm_password-label"
              >
                CONFIRM PASSWORD
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiInput-input"
                  id="confirm_password"
                  name="confirm_password"
                  type="password"
                  value="123123"
                />
              </div>
            </div>
            <span
              class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
            />
          </label>
        </div>
        <div
          class="MuiFormGroup-root makeStyles-group-2 makeStyles-hideGroup-12"
        >
          <label
            class="MuiFormLabel-root makeStyles-text-8"
          >
            date of birth
          </label>
          <div
            class="makeStyles-date-7"
          >
            <label
              class="MuiFormControlLabel-root makeStyles-control-15"
            >
              <div
                class="MuiFormControl-root MuiTextField-root makeStyles-input-14 MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                  data-shrink="true"
                  for="day"
                  id="day-label"
                >
                  DD
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input"
                    id="day"
                    name="day"
                    type="number"
                    value="12"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-16 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-18 PrivateNotchedOutline-legendNotched-19"
                    >
                      <span>
                        DD
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              />
            </label>
            <label
              class="MuiFormControlLabel-root makeStyles-control-15"
            >
              <div
                class="MuiFormControl-root MuiTextField-root makeStyles-input-14 MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                  data-shrink="true"
                  for="month"
                  id="month-label"
                >
                  MM
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input"
                    id="month"
                    name="month"
                    type="number"
                    value="12"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-16 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-18 PrivateNotchedOutline-legendNotched-19"
                    >
                      <span>
                        MM
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              />
            </label>
            <label
              class="MuiFormControlLabel-root makeStyles-control-15"
            >
              <div
                class="MuiFormControl-root MuiTextField-root makeStyles-input-14 MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                  data-shrink="true"
                  for="year"
                  id="year-label"
                >
                  YYYY
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input"
                    id="year"
                    name="year"
                    type="number"
                    value="2000"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-16 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-18 PrivateNotchedOutline-legendNotched-19"
                    >
                      <span>
                        YYYY
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              />
            </label>
          </div>
          <label
            class="MuiFormLabel-root makeStyles-text-8"
          >
            gender
          </label>
          <div
            class="makeStyles-group-20"
          >
            <label
              class="makeStyles-label-21"
              for="male"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-23 MuiButton-containedPrimary"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <input
                    checked=""
                    class="makeStyles-field-22"
                    id="male"
                    name="gender"
                    type="radio"
                    value="male"
                  />
                  male
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </label>
            <label
              class="makeStyles-label-21"
              for="female"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-23"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <input
                    class="makeStyles-field-22"
                    id="female"
                    name="gender"
                    type="radio"
                    value="female"
                  />
                  female
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </label>
            <label
              class="makeStyles-label-21"
              for="unspecified"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-23"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <input
                    class="makeStyles-field-22"
                    id="unspecified"
                    name="gender"
                    type="radio"
                    value="unspecified"
                  />
                  unspecified
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </label>
          </div>
          <label
            class="MuiFormLabel-root makeStyles-text-8"
          >
            where did you hear about is?
          </label>
          <div
            class="MuiFormControl-root"
          >
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="how_hear_about_us"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="how_hear_about_us"
                role="button"
                tabindex="0"
              >
                Google
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="how_hear_about_us"
                tabindex="-1"
                value="google"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-16 MuiOutlinedInput-notchedOutline"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-17"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiFormGroup-root makeStyles-group-2 makeStyles-showGroup-13"
          style="justify-content: center; align-items: center;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            style="color: rgb(187, 233, 140); font-size: 230px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.29 16.29L5.7 12.7a.9959.9959 0 010-1.41c.39-.39 1.02-.39 1.41 0L10 14.17l6.88-6.88c.39-.39 1.02-.39 1.41 0 .39.39.39 1.02 0 1.41l-7.59 7.59c-.38.39-1.02.39-1.41 0z"
            />
          </svg>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            role="dashboard-btn"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Go to Dashboard
              <span
                class="MuiButton-endIcon MuiButton-iconSizeMedium"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-buttons-9"
      style="opacity: 0; pointer-events: none;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text"
        role="back-btn"
        style="visibility: visible;"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
          </span>
          Back
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
        role="submit"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Next
          <span
            class="MuiButton-endIcon MuiButton-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`<Form /> should check Form functionality 6`] = `
<div>
  <form
    class="makeStyles-form-1"
    novalidate=""
  >
    <p
      class="makeStyles-title-4"
      data-title="1"
    >
      Signup
    </p>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="67"
      class="MuiLinearProgress-root MuiLinearProgress-colorPrimary makeStyles-stepper-3 MuiLinearProgress-determinate"
      role="progressbar"
    >
      <div
        class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
        style="transform: translateX(-33.33333333333333%);"
      />
    </div>
    <div
      class="makeStyles-overflow-5"
    >
      <div
        class="makeStyles-container-6"
        data-test-wrap="1"
        style="transform: translateX(-100%);"
      >
        <div
          class="MuiFormGroup-root makeStyles-group-2 makeStyles-hideGroup-12"
        >
          <label
            class="MuiFormControlLabel-root makeStyles-control-15"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-input-14 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                data-shrink="true"
                for="email"
                id="email-label"
              >
                EMAIL
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiInput-input"
                  id="email"
                  name="email"
                  type="email"
                  value="test@mail.ru"
                />
              </div>
            </div>
            <span
              class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
            />
          </label>
          <label
            class="MuiFormControlLabel-root makeStyles-control-15"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-input-14 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                data-shrink="true"
                for="password"
                id="password-label"
              >
                PASSWORD
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiInput-input"
                  id="password"
                  name="password"
                  type="password"
                  value="123123"
                />
              </div>
            </div>
            <span
              class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
            />
          </label>
          <label
            class="MuiFormControlLabel-root makeStyles-control-15"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-input-14 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                data-shrink="true"
                for="confirm_password"
                id="confirm_password-label"
              >
                CONFIRM PASSWORD
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiInput-input"
                  id="confirm_password"
                  name="confirm_password"
                  type="password"
                  value="123123"
                />
              </div>
            </div>
            <span
              class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
            />
          </label>
        </div>
        <div
          class="MuiFormGroup-root makeStyles-group-2 makeStyles-showGroup-13"
        >
          <label
            class="MuiFormLabel-root makeStyles-text-8"
          >
            date of birth
          </label>
          <div
            class="makeStyles-date-7"
          >
            <label
              class="MuiFormControlLabel-root makeStyles-control-15"
            >
              <div
                class="MuiFormControl-root MuiTextField-root makeStyles-input-14 MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                  data-shrink="true"
                  for="day"
                  id="day-label"
                >
                  DD
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input"
                    id="day"
                    name="day"
                    type="number"
                    value="12"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-16 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-18 PrivateNotchedOutline-legendNotched-19"
                    >
                      <span>
                        DD
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              />
            </label>
            <label
              class="MuiFormControlLabel-root makeStyles-control-15"
            >
              <div
                class="MuiFormControl-root MuiTextField-root makeStyles-input-14 MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                  data-shrink="true"
                  for="month"
                  id="month-label"
                >
                  MM
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input"
                    id="month"
                    name="month"
                    type="number"
                    value="12"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-16 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-18 PrivateNotchedOutline-legendNotched-19"
                    >
                      <span>
                        MM
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              />
            </label>
            <label
              class="MuiFormControlLabel-root makeStyles-control-15"
            >
              <div
                class="MuiFormControl-root MuiTextField-root makeStyles-input-14 MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                  data-shrink="true"
                  for="year"
                  id="year-label"
                >
                  YYYY
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input"
                    id="year"
                    name="year"
                    type="number"
                    value="2000"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-16 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-18 PrivateNotchedOutline-legendNotched-19"
                    >
                      <span>
                        YYYY
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              />
            </label>
          </div>
          <label
            class="MuiFormLabel-root makeStyles-text-8"
          >
            gender
          </label>
          <div
            class="makeStyles-group-20"
          >
            <label
              class="makeStyles-label-21"
              for="male"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-23 MuiButton-containedPrimary"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <input
                    checked=""
                    class="makeStyles-field-22"
                    id="male"
                    name="gender"
                    type="radio"
                    value="male"
                  />
                  male
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </label>
            <label
              class="makeStyles-label-21"
              for="female"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-23"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <input
                    class="makeStyles-field-22"
                    id="female"
                    name="gender"
                    type="radio"
                    value="female"
                  />
                  female
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </label>
            <label
              class="makeStyles-label-21"
              for="unspecified"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-23"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <input
                    class="makeStyles-field-22"
                    id="unspecified"
                    name="gender"
                    type="radio"
                    value="unspecified"
                  />
                  unspecified
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </label>
          </div>
          <label
            class="MuiFormLabel-root makeStyles-text-8"
          >
            where did you hear about is?
          </label>
          <div
            class="MuiFormControl-root"
          >
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="how_hear_about_us"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="how_hear_about_us"
                role="button"
                tabindex="0"
              >
                Google
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="how_hear_about_us"
                tabindex="-1"
                value="google"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-16 MuiOutlinedInput-notchedOutline"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-17"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiFormGroup-root makeStyles-group-2 makeStyles-hideGroup-12"
          style="justify-content: center; align-items: center;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            style="color: rgb(187, 233, 140); font-size: 230px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.29 16.29L5.7 12.7a.9959.9959 0 010-1.41c.39-.39 1.02-.39 1.41 0L10 14.17l6.88-6.88c.39-.39 1.02-.39 1.41 0 .39.39.39 1.02 0 1.41l-7.59 7.59c-.38.39-1.02.39-1.41 0z"
            />
          </svg>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            role="dashboard-btn"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Go to Dashboard
              <span
                class="MuiButton-endIcon MuiButton-iconSizeMedium"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-buttons-9"
      style="opacity: 1; pointer-events: initial;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text"
        role="back-btn"
        style="visibility: visible;"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
          </span>
          Back
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
        role="submit"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Next
          <span
            class="MuiButton-endIcon MuiButton-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;
